--- a/style.css
+++ b/style.css
@@ -40,6 +40,14 @@ body {
     margin:0
 }
 
+#content {
+    width: 800px;
+    margin: auto;
+    height: 100%;
+    display: flex;
+    align-items: center;
+  }
+
 article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section,summary {
     display:block
 }
