--- a/style.css
+++ b/style.css
@@ -40,14 +40,12 @@ body {
     margin:0
 }
 
-#content {
-    width: 1440px;
-    margin: auto;
-    height: 100%;
+.content {
     display: flex;
+    justify-content: center;
     align-items: center;
-    position: relative;
-  }
+    height: 100vh;
+}
 
 article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section,summary {
     display:block
