--- a/style.css
+++ b/style.css
@@ -47,6 +47,13 @@ body {
     height: 100vh;
 }
 
+.content iframe {
+    width: 1440px; 
+    max-width: 100%;
+    height: 1440px;
+    max-height: 100%; 
+}
+
 article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section,summary {
     display:block
 }
